Move Back to Portfolio button inside navbarand fix logooverflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,31 @@
+
+
+/* Smooth scrolling */
+
 html {
   scroll-behavior: smooth;
 }
 
-/* Smooth scrolling */
-html {
-  scroll-behavior: smooth;
+/* Back to Portfolio Button inside Navbar */
+.back-portfolio-btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  padding: 6px 12px;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  margin-left: 20px;
+  transition: 0.3s;
 }
+
+.back-portfolio-btn:hover {
+  background: #fff;
+  color: #a30d2d;
+}
+
+
 
 /* BACK TO PORTFOLIO BUTTON */
 .back-portfolio-container {
@@ -28,6 +48,32 @@ html {
 .back-portfolio-btn:hover {
   background: #000;
   color: #fff;
+}
+
+
+/* HERO SECTION */
+/* Smooth scrolling */
+html {
+  scroll-behavior: smooth;
+}
+
+/* Back to Portfolio Button inside Navbar */
+.back-portfolio-btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  padding: 6px 12px;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  margin-left: 20px;
+  transition: 0.3s;
+}
+
+.back-portfolio-btn:hover {
+  background: #fff;
+  color: #a30d2d;
 }
 
 /* NAVBAR */
@@ -79,15 +125,13 @@ html {
   margin-left: 10px;
 }
 
-/* Hamburger */
+/* Hamburger menu */
 .menu-toggle {
   display: none;
   font-size: 24px;
   cursor: pointer;
   color: #fff;
 }
-
-/* HERO SECTION */
 
 .hero {
   display: flex;
@@ -292,17 +336,8 @@ html {
   .menu-toggle{
     display: block;
   }
-  .navbar {
-    padding: 15px;
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    right: 0;
-    left: 0;
-  }
 
-  .nav-links.open{
-    .nav-links.open {
+   .nav-links.open {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -318,6 +353,16 @@ html {
   .nav-links.open a {
     margin: 10px 0;
   }
+  .navbar {
+    padding: 15px;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+
+  
 
   
 
@@ -332,7 +377,7 @@ html {
     width: 100%;
     max-width: 520px;
   }
-}
+
 
 @media (max-width: 768px) {
   .nav-icons, .nav-links {
